Bug 501708 - With single-click, 63a00c27f85592b6a2898c54dcda61d9a6f6c61f causes items to be selected rather than opened, but only for the first click
Summary: With single-click, 63a00c27f85592b6a2898c54dcda61d9a6f6c61f causes items to b...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-03-18 21:18 UTC by Nate Graham
Modified: 2025-03-19 17:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-03-18 21:18:52 UTC
STEPS TO REPRODUCE
1. Use single-click
2. Launch KWrite
3. Press Ctrl+O to show the Open dialog
4. Single-click on a folder in dialog's view (not the places panel)


OBSERVED RESULT
The folder is selected.


EXPECTED RESULT
The folder is opened.


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.13.0
Qt Version: 6.8.2
Kernel Version: 6.13.6-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 16 GB of RAM (14.9 GB usable)
Graphics Processor: AMD Radeon 780M


ADDITIONAL INFORMATION
All subsequent clicks work as expected; only the first one inappropriately selects the folder instead of opening it.

Reverting 63a00c27f85592b6a2898c54dcda61d9a6f6c61f fixes the issue for me.

Could it be because m_isTouchDrag is initialized to true instead of false?
Comment 1 Bug Janitor Service 2025-03-18 21:25:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1844
Comment 2 Nate Graham 2025-03-19 17:13:55 UTC
Git commit db05ee0b7053bbe07defd3b5dd5750297f3094be by Nate Graham, on behalf of Marco Martin.
Committed on 19/03/2025 at 17:13.
Pushed by ngraham into branch 'master'.

Fix touch interaction

Fix touch when there is no scrollbar and better manage internal state:
m_isTouchEvent is always reset on mousebuttonrelease, and only when
m_isTouchDrag the event gets blocked.
FIXED-IN: 6.13

M  +3    -2    src/filewidgets/kdiroperator.cpp

https://invent.kde.org/frameworks/kio/-/commit/db05ee0b7053bbe07defd3b5dd5750297f3094be