Fix touch interaction

Fix touch when there is no scrollbar and better manage internal state:
m_isTouchEvent is always reset on mousebuttonrelease, and only when
m_isTouchDrag the event gets blocked.

BUG: 501708
FIXED-IN: 6.13